@@ -61,9 +61,24 @@ Feature: Resource
     And I am on the "Content" page
     And I click "Resource"
     And I fill in "edit-field-link-remote-file-und-0-filefield-remotefile-url" with "https://s3.amazonaws.com/dkan-default-content-files/files/district_centerpoints_0.csv"
+
     When I fill in "Title" with "Resource 06"
     And I press "Save"
     Then I should see "Resource Resource 06 has been created"
+
+  @noworkflow @javascript
+  Scenario: Create resource with too many sources.
+    Given I am logged in as "Katie"
+    And I am on the "Content" page
+    And I click "Resource"
+    And I click "Remote file"
+    And I fill in "edit-field-link-remote-file-und-0-filefield-remotefile-url" with "https://s3.amazonaws.com/dkan-default-content-files/files/district_centerpoints_short_version.csv"
+    And I click "API or Website URL"
+    And I fill in "edit-field-link-api-und-0-url" with "http://earthquake.usgs.gov/fdsnws/event/1/query?format=geojson&starttime=2014-01-01&endtime=2014-01-02"
+    When I fill in "Title" with "Resource 06"
+    And I press "Save"
+    Then I should see "Remote file is populated - only one resource type can be used at a time"
+    And I should see "API or Website URL is populated - only one resource type can be used at a time"
 
   @noworkflow
   #TODO: Content creator will be a role added later, but for now we stick with authenticated user
